[gd_scene load_steps=5 format=3 uid="uid://drc087t34sdxo"]

[ext_resource type="Texture2D" uid="uid://cm427q4fdtl4i" path="res://src/assets/sprites/interactables/action-interactable-bg.png" id="1_1w3us"]
[ext_resource type="Script" path="res://src/entities/props/interactable_props/action_interactable/action_interactable.gd" id="1_u527d"]
[ext_resource type="FontFile" uid="uid://cr0veva7b3pab" path="res://src/assets/fonts/caveat_regular.ttf" id="2_7h18n"]

[sub_resource type="BoxShape3D" id="BoxShape3D_pviht"]
size = Vector3(2.94769, 1, 0.24707)

[node name="ActionInteractable" type="Area3D"]
script = ExtResource("1_u527d")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0393982, 0, 0.0629883)
shape = SubResource("BoxShape3D_pviht")

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1, 0, 0, 0)
alpha_cut = 2
texture = ExtResource("1_1w3us")

[node name="Label3D" type="Label3D" parent="Sprite3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.0246831)
render_priority = 1
outline_render_priority = -2
modulate = Color(0.110036, 0.110036, 0.110036, 1)
text = "Test"
font = ExtResource("2_7h18n")
font_size = 72

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
